# sortlib

./: .gitignore  CMakeLists.txt  README.md
include/: sort.h
src/: sort.c
test/: test.c  test.cpp
